<resources>
    <string name="app_name">FindUp</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>

    <string name="menu_upload">Upload Ide</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_profile_owner">Profile Owner</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Sign Up</string>
    <string name="daftar">Don`t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="title_login_page">Log In</string>
    <string name="title_feeds">Feeds</string>
    <string name="content_description_profile_image">Profile Image</string>
    <string name="content_description_event_image">Event Image</string>
    <string name="content_description_like_icon">Like Icon</string>
    <string name="profile_name">Julian Krämer</string>
    <string name="profile_time">20 minutes ago</string>
    <string name="title_text">Title Idea</string>
    <string name="description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna…</string>
    <string name="likes_text">12 Like</string>
    <string name="comments_text">4 Comments</string>
    <string name="title_ide">Judul Ide</string>
    <string name="title_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna…</string>
    <string name="foundedByLabel">Founded by:</string>
    <string name="founderName">Nama Founder</string>
    <string name="founderRole">Role</string>
    <string name="title_detail">Details:</string>
    <string name="btn_join">Join as Team</string>
    <string name="like_button">Like</string>
    <string name="likeCount">0 Like</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_post">Posting Ide</string>
    <string name="add_image">Add Image (optional)</string>
    <string name="title_chat">Coming soon feature</string>

    <string name="draft">Draft</string>
    <string name="post">Post</string>
    <string name="next">Next</string>
    <string name="post_idea">Post Idea</string>
    <string name="add_feeds">Add Feeds</string>
    <string name="title_idea">Title Idea</string>
    <string name="tagline_optional">Tagline (Optional)</string>
    <string name="put_description">Put your description here</string>

    <string name="uploadCV">Upload CV</string>
    <string name="logout">Log out</string>
    <string name="put_detail_description">Add detailed description</string>
    <string name="app_logo">App Logo</string>
    <string name="choose_your_role">Choose Your Role...</string>
    <string name="owner">OWNER</string>
    <string name="tech_worker">TECH WORKER</string>
    <string name="done">Done</string>
    <string name="bio_profile">Hard Work, Creative, Innovative, Network and Connection, Focus on Results</string>
    <string name="role">Role</string>
    <string name="all_category">All</string>
    <string name="finance_category">Finance</string>
    <string name="education_category">Education</string>
    <string name="e_commerce_category">E-commerce</string>
    <string name="reject">Reject</string>
    <string name="interview">Interview</string>
    <string name="accept">Accept</string>
    <string name="status">Status</string>
    <string name="position">Position</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="name_ide">Name Ide</string>
    <string name="status_application">Status</string>
    <string name="my_application">My Application</string>
    <string name="owner_name">Owner Name</string>
    <string name="company_description">Company Description</string>
    <string name="list_candidate">Candidate</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="gmail">Gmail</string>
    <string name="coming_soon_image">coming soon image</string>
    <string name="needed_role_1">Need Role 1</string>
    <string name="needed_role_2">Need Role 2</string>
    <string name="summary">Sumarry</string>
    <string name="illustration">Illustration</string>
    <string name="see_my_application">See My Application</string>
    <string name="back">Back</string>
    <string name="text_body_join_team">Your application has been successfully accepted. Now you just need to wait for a response from the founder</string>
    <string name="Tittle_join_team">Congratulations!</string>
    <string name="all">All</string>
    <string name="education">Education</string>
    <string name="finance">Finance</string>
    <string name="design">Design</string>

    <string name="no_title">No Title Available</string>
    <string name="no_description">No Description Available</string>
    <string name="no_details">No Details Available</string>
    <string name="no_summary">No Summary Available</string>
    <string name="unknown_user">Unknown User</string>
    <string name="unknown_role">Unknown Role</string>
    <string name="no_roles_needed">No Roles Needed</string>
    <string name="no_role">No Roles</string>

    <string name="title_owner_profile">Owner Profile</string>
    <string name="title_techworker_profile">Techworker Profile</string>
    <string name="my_idea">My Idea</string>">
    <string name="description_application">Description</string>
    <string name="role2">- Role 2: Designer</string>
    <string name="role1">- Role 1: Developer</string>
    <string name="need_role">Needed Roles</string>
    <string name="summary_text">This is a brief summary of the idea.</string>
    <string name="summary_title">Summary</string>
    <string name="already_joined">Already Joined</string>
    <string name="join">Join Team</string>

    <string name="default_username">Techworker</string>
    <string name="upload_cv_warning">Warning</string>

    <string name="score">Score :</string>
    <string name="recommendation">CV recommend</string>


</resources>