<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.foundup.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.dicoding.foundup.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.foundup.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_profile_owner"
        android:name="com.dicoding.foundup.ui.profileowner.ProfileOwnerFragment"
        android:label="@string/title_owner_profile"
        tools:layout="@layout/fragment_profile_owner" />

    <fragment
        android:id="@+id/navigation_profile_techworker"
        android:name="com.dicoding.foundup.ui.profile.ProfileFragment"
        android:label="@string/title_techworker_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>