<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".ui.ideDetail.IdeDetailActivity">

    <ImageView
        android:id="@+id/ideaImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_thumb_up_24"
        android:background="@color/white"
        android:contentDescription="@string/content_description_like_icon"
        app:layout_constraintTop_toBottomOf="@id/ideaImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/likeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likeCount"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/likeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/ideaTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_ide"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/likeCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/ideaDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_description"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ideaTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/foundedByLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foundedByLabel"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ideaDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="4dp" />

    <ImageView
        android:id="@+id/founderImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_profile_24"
        app:layout_constraintTop_toBottomOf="@id/foundedByLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/founderImage"
        app:layout_constraintStart_toEndOf="@id/founderImage"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/founderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/founderName"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/founderRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/founderRole"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/detailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_detail"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/founderImage"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="16dp"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/ideaDetailsContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description_text"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/detailsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:text="@string/btn_join"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ideaDetailsContent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>
