<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:padding="16dp"
    android:id="@+id/profileOwnerFragment"
    tools:context=".ui.profileowner.ProfileOwnerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/ownerProfileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:src="@drawable/ic_profile"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:background="@drawable/bg_circle" />

            <TextView
                android:id="@+id/ownerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/ownerCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_description"
                android:textSize="14sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Social Media Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/linkedinIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_linkedin"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/linkedin" />

            <ImageView
                android:id="@+id/instagramIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_instagram"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/instagram" />

            <!-- Gmail Icon -->
            <ImageView
                android:id="@+id/gmailIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_gmail"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/gmail" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_centerInParent="true" />


        <!-- My Idea Menu -->
        <LinearLayout
            android:id="@+id/myIdeaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="16dp"
            android:background="@drawable/menu_background"
            android:elevation="4dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="24dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_my_idea"
                android:layout_marginEnd="12dp" />

            <TextView
                android:id="@+id/myIdeaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_idea"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- List Candidate -->
        <LinearLayout
            android:id="@+id/listCandidateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="16dp"
            android:background="@drawable/menu_background"
            android:elevation="4dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="24dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_my_application"
                android:layout_marginEnd="12dp" />

            <TextView
                android:id="@+id/listCandidateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_candidate"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Logout -->
        <LinearLayout
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_background"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_logout" />

            <TextView
                android:id="@+id/logoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
